<resources>
    <string name="app_name">For9a</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="select_gender_TextView">select gender</string>
    <string name="mBirthdayTextview">تاريخ الميلاد</string>
    <string name="mResidenceTextview">بلد الاقامة</string>
    <string name="mPhoneTextview">رقم التلفون</string>
    <string name="mEducationalLevelTextview">المستوى التعليمي</string>
    <string name="mSpecializationTextView">التخصص</string>
    <string name="mPreviousButton">سابقا</string>
    <string name="mNextButton">المتابعة</string>
    <string name="mDoneButton">Done</string>
    <string name="mFirstNameTextview">الإسم الأول</string>
    <string name="mLastNameTextView">إسم العائلة</string>
    <string name="mEmailTextview">البريد الإلكتروني</string>
    <string name="mPasswordTextView">كلمة السر</string>
    <string name="next">التالي</string>
    <string name="mSignUp">تسجيل</string>
    <string name="newUser">مستخدم جديد</string>
    <string name="userInfo">معلومات المستخدم</string>


    <string-array name="options">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>

    </string-array>
</resources>
