<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <variable
                name="viewPersonalInfo"
                type="com.example.farahal_kiswani.for9a.wizard.viewModel.PersonalInfoViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fillViewport="true"
            android:isScrollContainer="true">
        <LinearLayout
                android:layout_width="match_parent"
                style="@style/layoutDirection"
                android:layout_height="match_parent"
                android:background="@color/gray_background"
                android:gravity="center|top"
                android:orientation="vertical"
        >


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userInfo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:gravity="center">
                <TextView android:layout_width="wrap_content"
                          android:hint="@string/select_gender_TextView"
                          android:textSize="18sp"
                          android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_gender"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:gravity="center">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#cfcfcf"
                        android:padding="10dp"
                        android:src="@drawable/ic_place_white_18dp"/>


                <EditText
                        android:id="@+id/et_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewPersonalInfo.MResidence}"
                        android:hint="@string/mResidenceTextview"
                        android:inputType="text"
                        android:padding="5dp"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:gravity="center">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#cfcfcf"
                        android:padding="10dp"
                        android:src="@drawable/ic_phone_android_white_18dp"></ImageView>


                <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewPersonalInfo.MPhone}"
                        android:hint="@string/mPhoneTextview"
                        android:inputType="text"
                        android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:gravity="center">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#cfcfcf"
                        android:padding="10dp"
                        android:src="@drawable/ic_person_white_18dp"></ImageView>


                <EditText
                        android:id="@+id/et_Birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewPersonalInfo.MBirthday}"
                        android:hint="@string/mBirthdayTextview"
                        android:inputType="text"
                        android:padding="5dp"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:gravity="center">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#cfcfcf"
                        android:padding="10dp"
                        android:src="@drawable/ic_language_white_18dp"></ImageView>


                <EditText
                        android:id="@+id/et_educational_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewPersonalInfo.MEducationalLevel}"
                        android:hint="@string/mEducationalLevelTextview"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:gravity="center">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#cfcfcf"
                        android:padding="10dp"
                        android:src="@drawable/ic_language_white_18dp"></ImageView>


                <EditText
                        android:id="@+id/et_specialization"
                        style="@style/GravityLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewPersonalInfo.MSpecialization}"
                        android:hint="@string/mSpecializationTextView"
                        android:inputType="textPassword"
                        android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">


                <Button
                        android:id="@+id/button_previous"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#727272"
                        android:text="@string/mPreviousButton"
                        android:onClick="@{(v)->viewPersonalInfo.back(v)}"
                        android:textColor="@android:color/white"/>
                <Button
                        android:id="@+id/button_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#727272"
                        android:text="@string/mNextButton"
                        android:onClick="@{(v)->viewPersonalInfo.onLoginButtonClicked(v)}"
                        android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</layout>